Implements user authentication and migrates to TypeScript
Adds user authentication system with login, registration, and password recovery.

Migrates the entire project to TypeScript to improve code maintainability and prevent errors. Includes Redux Toolkit for state management, Redux Persist for session persistence, and implements route protection based on user authentication and roles.

This migration provides static typing, better IntelliSense, safer refactoring and live documentation.

--- a/package.json
+++ b/package.json
@@ -5,20 +5,25 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "gh-pages -d build --repo https://x-access-token:${GITHUB_TOKEN}@github.com/elisabelen4-commits/Aprendo-mas.git"
+    "type-check": "tsc --noEmit",
+    "deploy": "gh-pages -d dist --repo https://x-access-token:${GITHUB_TOKEN}@github.com/elisabelen4-commits/Aprendo-mas.git"
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.27.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.8.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
@@ -26,6 +31,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "typescript": "^5.9.2",
     "vite": "^7.1.2"
   }
 }
